# probmachine

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
assets/1/: factory_bank_a.json  factory_bank_b.json  factory_bank_c.json  factory_bank_d.json
assets/presets/: factory_bank_a.json  factory_bank_b.json  factory_bank_c.json  factory_bank_d.json  factory_bank_e.json  factory_bank_f.json  factory_bank_g.json  factory_bank_h.json
builds/: README.md
docs/: INDEX.md  architecture.md  audio-setup.md  building.md  improvements.md  jack-setup.md  ml-beat-suggestion.md  ml-suggest.md  note-stability.md  parameters.md  pll-improvements.md  roadmap.md  sequencer.md  strength.md  synthesis.md  ui-guide.md
scripts/: build-all.sh  build-plugins.sh  copy_user_to_factory.py  create_factory_presets.py  dev.sh  generate_presets.py  migrate_user_presets.py  run.sh  start-kiosk.sh
src/: lib.rs  main.rs  midi.rs  midi_clock.rs  midi_devices.rs  midi_learn.rs  params.rs  sequencer.rs  tempo.rs
src/midi_modes/: accompaniment.rs  chord_follow.rs  mod.rs  scale_detect.rs
src/preset/: data.rs  defaults.rs  manager.rs  mod.rs
src/sequencer/: algo_suggest.rs  melodic_engine.rs  ml_dataset.rs  ml_suggest.rs  mod.rs  multi_bar.rs  note_utils.rs  scales.rs  styles.rs
src/synth/: box_cut.rs  brilliance.rs  compressor.rs  dsp.rs  envelope.rs  filter.rs  formant.rs  ladder_filter.rs  lfo.rs  limiter.rs  looper.rs  master_hpf.rs  mod.rs  mod_sequencer.rs  oscillator.rs  ping_pong_delay.rs  reverb.rs  simd.rs  stereo_control.rs  voice.rs
src/ui/: grid_picker.rs  mod.rs  navigation.rs  page.rs  shared_state.rs
src/ui/pages/: beat_probability.rs  length.rs  mod.rs  modulation.rs  notes.rs  presets.rs  sequence.rs  settings.rs  strength.rs  synth.rs
xtask/: Cargo.toml
