[package]
name = "phaseburn"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["xtask"]

[dependencies]
nih_plug = { git = "https://github.com/uchu/nih-plug.git", branch = "device-patches", features = ["standalone"] }
nih_plug_egui = { git = "https://github.com/uchu/nih-plug.git", branch = "device-patches" }
egui_taffy = "0.7"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
midly = "0.5"
midir = "0.10"
lz4_flex = "0.11"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "phaseburn"
path = "src/main.rs"

[[bin]]
name = "midi_extract"
path = "src/bin/midi_extract.rs"

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
